<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="daisy">Daisy</string>
    <string name="action_settings">Settings</string>
    <string name="title_nodeview_list">NodeMap</string>
    <string name="title_nodeview_detail">NodeMap</string>
    <string name="send">Send</string>
    <string name="new_deployment">New Deployment:</string>
    <string name="name">Name:</string>
    <string name="date">Date:</string>
    <string name="create">Create</string>
    <string name="load_devployment">Load Deployment:</string>
    <string name="load">Load</string>
    <string name="choose">Choose</string>
    <string name="please_start">Please start by creating/selecting a Deployment.</string>
    <string name="_error_">[error]</string>
    <string name="select_a_deployment">Select a Deployment</string>
    <string name="there_are_d_deployments_on_this_device">There are %d deployments on this device</string>
    <string name="save">Save</string>
    <string name="save_deployment">Save Deployment:</string>
    <string name="chat">Chat</string>
    <string name="users">Users</string>
    <string name="debug_options">Debug Options</string>
    <string name="bluetooth_debug_options">Bluetooth Debug Options</string>
    <string name="wifi_debug_options">WIFI Debug Options</string>
    <string name="osm">OpenStreetMap</string>
    <string name="bing">Bing</string>
    <string name="Google">Google</string>
    <string name="overlays">Overlays</string>
    <string name="nodes">Nodes</string>
    <string name="notes">Notes</string>
    <string name="voice_notes">Voice Notes</string>
    <string name="images">Images:</string>
    <string name="sensor_nodes">Sensor Nodes</string>
    <string name="bluetooth_scan">Bluetooth Scan</string>
    <string name="wifi_p2p_scan">WiFi P2P Scan</string>
    <string name="wifi_ap_scan">WiFi AP Scan</string>
    <string name="discovered_devices">Discovered Devices</string>
    <string name="logs">Logs</string>
    <string name="deployment_data">Deployment Data</string>
    <string name="participating_devices">Participating Devices</string>
    <string name="scan_on">Scan On</string>
    <string name="scan_off">Scan Off</string>
    <string name="listen_on">Listen On</string>
    <string name="listen_off">Listen Off</string>
    <string name="scan_node">Scan Node</string>
    <string name="actions">Actions</string>
    <string name="map">Map</string>
    <string name="map_archives">Map [Archives]</string>
    <string name="map_online_cached">Map [Online/Cached]</string>
    <string name="send_logs">Send Logs</string>
    <string name="send_deployment">Send Deployment</string>
    <string name="launch">Launch</string>
    <string name="open_first_xbee_device">Open First XBee Device</string>
    <string name="open_device">Open Device</string>
    <string name="send_command">Send Command</string>
    <string name="command">Command:</string>
    <string name="hex_parameters">Hex Parameters:</string>
    <string name="init">Init</string>
    <string name="received_messages">Received Messages</string>
    <string name="close">Close</string>
    <string name="arview">ARView</string>
    <string name="battery_">Battery:</string>
    <string name="delete">Delete</string>
    <string name="device_information_">Device Information:</string>
    <string name="landmark_text_">Landmark Text:</string>
    <string name="sensor_data">Sensor Data:</string>
    <string name="Capture_Delay_">"Capture Delay: "</string>
    <string name="title_activity_activity_annotation">Create Annotation</string>
    <string name="hello_world">Hello world!</string>
    <string name="add_text_annotation">Add Text Annotation</string>
    <string name="lmages">Images</string>
    <string name="add_ip_to_system">Add IP to System:</string>

</resources>