<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:background="@drawable/card" >

    <TextView
        android:id="@+id/lblSlider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/new_deployment"
        android:textAppearance="@style/CardTitle" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/etDeploymentName"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:text="@string/date"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/btnDeploymentCreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/tvDeploymentDate"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/create" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/btnDeploymentCreate"
        android:text="@string/load_devployment"
        android:textAppearance="@style/CardTitle" />

    <Button
        android:id="@+id/btnDeploymentChoose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/tvDeploymentOnDiskInfo"
        android:text="@string/choose" />

    <TextView
        android:id="@+id/tvBalloonCaptureDelay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/View01"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:text="@string/name"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <View
        android:id="@+id/View01"
        android:layout_width="wrap_content"
        android:layout_height="2dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/lblSlider"
        android:background="@color/stroke" />

    <View
        android:id="@+id/View1"
        android:layout_width="wrap_content"
        android:layout_height="2dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView4"
        android:background="@color/stroke" />

    <TextView
        android:id="@+id/tvDeploymentOnDiskInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/View1"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:gravity="center_vertical"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <View
        android:id="@+id/View3"
        android:layout_width="wrap_content"
        android:layout_height="2dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/lblXBeeSendCommand"
        android:background="@color/stroke" />

    <TextView
        android:id="@+id/lblXBeeSendCommand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/btnDeploymentChoose"
        android:text="@string/save_deployment"
        android:textAppearance="@style/CardTitle" />

    <TextView
        android:id="@+id/tvDeploymentCurrent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/View3"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/btnDeploymentSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/tvDeploymentCurrent"
        android:text="@string/save" />

    <EditText
        android:id="@+id/etDeploymentName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/tvBalloonCaptureDelay"
        android:ems="10"
        android:gravity="right|center_vertical" />

    <TextView
        android:id="@+id/tvDeploymentDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView3"
        android:layout_alignBottom="@+id/textView3"
        android:layout_alignParentRight="true"
        android:gravity="right|center_vertical"
        android:text="Medium Text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/btnDeploymentDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/btnDeploymentCreate"
        android:layout_alignParentLeft="true"
        android:text="@string/delete" />

f

</RelativeLayout>