<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/llNodeViewRootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1" >

        <LinearLayout
            android:id="@+id/llDeviceMainInsideScrollView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/card"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/lblNodeDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="Node Details"
                android:textAppearance="@style/CardTitle" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="false"
                android:layout_below="@+id/lblNodeDetails"
                android:background="@color/stroke" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/bar0"
                android:layout_below="@+id/bar0"
                android:text="@string/device_information_"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/tvDeviceInformation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/tvBalloonCaptureDelay"
                android:text="TextView" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:background="@color/stroke" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/tvDeviceInformation"
                android:text="@string/landmark_text_"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/tvDeviceLandmark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView2"
                android:layout_below="@+id/textView2"
                android:text="TextView" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:background="@color/stroke" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/images"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <GridView
                android:id="@+id/gvNodeImages"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:numColumns="3" >
            </GridView>

            <View
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:background="@color/stroke" />

            <Button
                android:id="@+id/btnFindNode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Find Node (Audio)" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:background="@color/stroke" />

            <TextView
                android:id="@+id/tvNodeDistance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Distance to Node: "
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/llChartView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:background="@drawable/card"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sensor_data"
            android:textAppearance="@style/CardTitle" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="2dp"
            android:background="@color/stroke" />
    </LinearLayout>

</LinearLayout>